--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "method-override": "^3.0.0",
+    "mongo": "^0.1.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1"
   },
